--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     
-    <div id="root" class=" scroll-smooth"></div>
+    <div id="root" class=" scroll-smooth overflow-x-hidden"></div>
     
   </body>
 </html>
